--- a/menu.html
+++ b/menu.html
@@ -34,7 +34,7 @@
           <div class="menu-content pb-60 col-lg-10">
             <div class="title text-center">
               <h1 class="mb-10 mt-20 display-5">Coffee Shop Menu</h1>
-              <p class="lead">Click And Wiew Your Coffee</p>
+              <p class="lead">Click And View Your Coffee</p>
             </div>
           </div>
         </div>
